...

  @override
  Widget build(BuildContext context) {
    return DefaultTabController(
      length: 3,
      child: Scaffold(
        appBar: AppBar(
          title: Text(
            "Cidades",
            key: Key('appBar'),
          ),
        ),
        body: _body(),
...
      );
    }

    return Container(
      padding: EdgeInsets.all(16),
      child: ListView.builder(
        key: Key('listView'),
        itemCount: list != null ? list.length : 0,
        itemBuilder: (_, int index) {
          Cidade cidade = list[index];

          return GestureDetector(
            onTap: () => _onClickCidade(cidade),
...
